--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "finten",
   "version": "1.0.0",
   "description": "The hypotenuse of the smallest pythagorean triples.",
-  "main": "main.ts",
+  "main": "src/main.ts",
   "scripts": {
+    "start": "ts-node src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,8 +19,13 @@
   "homepage": "https://github.com/FaradayDetu/finten#readme",
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/chalk": "^2.2.0",
     "@types/node": "^13.13.5",
+    "@types/ora": "^3.2.0",
     "axios": "^0.19.2",
+    "chalk": "^4.0.0",
+    "dotenv": "^8.2.0",
+    "ora": "^4.0.4",
     "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   }
