--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.ts",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node src/tests/tests.ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "chalk": "^4.0.0",
     "dotenv": "^8.2.0",
     "ora": "^4.0.4",
+    "parse-xbrl": "^1.1.5",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
   }
