--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/FaradayDetu/finten#readme",
   "dependencies": {
+    "@feathersjs/errors": "^4.5.3",
+    "@feathersjs/express": "^4.5.4",
+    "@feathersjs/feathers": "^4.5.3",
+    "@feathersjs/socketio": "^4.5.4",
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
     "@types/nedb": "^1.8.9",
