installed express and types

--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@feathersjs/socketio": "^4.5.4",
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
+    "@types/express": "^4.17.6",
     "@types/nedb": "^1.8.9",
     "@types/node": "^13.13.5",
     "@types/ora": "^3.2.0",
     "axios": "^0.19.2",
     "chalk": "^4.0.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "feathers-nedb": "^5.1.0",
     "nedb": "^1.8.0",
     "ora": "^4.0.4",
