added some routes to retrieve company data: available comapnies by name, available trading symbols, get company data by name

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.ts",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "start:watch": "nodemon",
+    "nodemon": "nodemon",
     "test": "ts-node src/tests/tests.ts"
   },
   "nodemonConfig": {
