--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.6",
+    "@types/moment": "^2.13.0",
     "@types/nedb": "^1.8.9",
     "@types/node": "^13.13.5",
     "@types/ora": "^3.2.0",
@@ -48,6 +49,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "feathers-nedb": "^5.1.0",
+    "moment": "^2.26.0",
     "nedb": "^1.8.0",
     "nodemon": "^2.0.4",
     "ora": "^4.0.4",
