reorganized file structure; added our own fork of parse-xbrl
The file structure of the repo has been reorganized to look more
like that of a layered approach: all 'entities' are now in
'src/classes' and the API routes are in 'src/routes/api'.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "nedb": "^1.8.0",
     "nodemon": "^2.0.4",
     "ora": "^4.0.4",
-    "parse-xbrl": "^1.1.5",
+    "parse-xbrl": "https://github.com/nikensss/parse-xbrl.git",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
   }
