--- a/package.json
+++ b/package.json
@@ -56,5 +56,13 @@
     "parse-xbrl": "https://github.com/nikensss/parse-xbrl.git",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/mocha": "^7.0.2",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^8.0.1"
   }
 }
