--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,9 +4,14 @@
   "extensions": [
     "mhutchie.git-graph",
     "eamodio.gitlens",
-    "pkief.material-icon-theme"
+    "pkief.material-icon-theme",
+    "ms-vsliveshare.vsliveshare"
   ],
   "workspaceMount": "source=/Users/faraday/repos/finten,target=/finten,type=bind,consistency=cached",
-  "appPort": ["3000:3000"],
-  "runArgs": ["--privileged=true"]
+  "appPort": [
+    "3000:3000"
+  ],
+  "runArgs": [
+    "--privileged=true"
+  ]
 }
