Added launch.json file for API debug

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.ts",
   "scripts": {
     "start": "DB='gcloud/fintendb/secgov.db' ts-node src/main.ts",
-    "local-db": "DB='fintendb/secgov.db' npm start",
+    "debug": "DB='fintendb/secgov.db' ts-node src/main.ts",
     "gcloud-db": "DB='./gcloud/fintendb/secgov.db' npm start",
     "nodemon": "nodemon",
     "test": "DB='fintendb/secgov.db' mocha debug --require ts-node/register test/**/*.spec.ts",
