--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,10 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
   "configurations": [
     {
-      "type": "node",
-      "request": "attach",
-      "name": "Launch Program",
-      "args": [
-        "${workspaceRoot}/src/main.ts"
-      ],
-      "runtimeArgs": [
-        "--nolazy",
-        "-r",
-        "ts-node/register"
-      ],
-      "sourceMaps": true,
-      "cwd": "${workspaceRoot}",
-      "protocol": "inspector"
+      "command": "npm run debug",
+      "name": "Run npm run debug",
+      "request": "launch",
+      "type": "node-terminal"
     }
   ]
 }
