--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.6",
     "@types/moment": "^2.13.0",
+    "@types/mongodb": "^3.5.27",
     "@types/nedb": "^1.8.9",
     "@types/node": "^13.13.5",
     "@types/ora": "^3.2.0",
@@ -56,6 +57,7 @@
     "express": "^4.17.1",
     "feathers-nedb": "^5.1.0",
     "moment": "^2.26.0",
+    "mongodb": "^3.6.2",
     "nedb": "^1.8.0",
     "nodemon": "^2.0.4",
     "ora": "^4.0.4",
@@ -70,6 +72,6 @@
     "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^8.0.1"
+    "mocha": "^8.1.3"
   }
 }
