--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "The hypotenuse of the smallest pythagorean triples.",
   "main": "src/main.ts",
   "scripts": {
-    "start": "DB='gcloud/fintendb/secgov.db' ts-node src/main.ts",
-    "debug": "DB='fintendb/secgov.db' ts-node src/main.ts",
-    "gcloud-db": "DB='./gcloud/fintendb/secgov.db' npm start",
+    "start": "ts-node -r dotenv/require src/main.ts",
+    "debug": "ts-node -r dotenv/require src/main.ts",
     "nodemon": "nodemon",
-    "test": "DB='fintendb/secgov.db' mocha debug --require ts-node/register test/**/*.spec.ts",
-    "test-api": "DB='fintendb/secgov.db' mocha --require ts-node/register test/api/**/*.spec.ts",
+    "test": "mocha debug --require dotenv/require  ts-node/register test/**/*.spec.ts",
+    "test-api": "mocha --require dotenv/require ts-node/register test/api/**/*.spec.ts",
     "npmi-container": "rm -rf node_modules && npm i"
   },
   "nodemonConfig": {
@@ -63,7 +62,7 @@
     "ora": "^4.0.4",
     "parse-xbrl": "https://github.com/nikensss/parse-xbrl.git",
     "supertest": "^4.0.2",
-    "ts-node": "^8.10.1",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.2"
   },
   "devDependencies": {
