finished adaptation for MongoDB
Cleaned the npm scripts. Removed unused packages. Adaptation with
MongoDB finished, data is properly added and visited links are
stored with indication of what went wrong in case anything did.

Ready to merge with default.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "The hypotenuse of the smallest pythagorean triples.",
   "main": "src/main.ts",
   "scripts": {
-    "start": "ts-node -r dotenv/require src/main.ts",
-    "debug": "ts-node -r dotenv/require src/main.ts",
+    "start": "ts-node -r dotenv/config src/main.ts",
     "nodemon": "nodemon",
-    "test": "mocha debug --require dotenv/require  ts-node/register test/**/*.spec.ts",
-    "test-api": "mocha --require dotenv/require ts-node/register test/api/**/*.spec.ts",
+    "test": "mocha debug --require dotenv/config  ts-node/register test/**/*.spec.ts",
+    "test-api": "mocha --require dotenv/config ts-node/register test/api/**/*.spec.ts",
     "npmi-container": "rm -rf node_modules && npm i"
   },
   "nodemonConfig": {
@@ -35,16 +34,11 @@
   },
   "homepage": "https://github.com/FaradayDetu/finten#readme",
   "dependencies": {
-    "@feathersjs/errors": "^4.5.3",
-    "@feathersjs/express": "^4.5.4",
-    "@feathersjs/feathers": "^4.5.3",
-    "@feathersjs/socketio": "^4.5.4",
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
-    "@types/express": "^4.17.6",
+    "@types/express": "^4.17.8",
     "@types/moment": "^2.13.0",
     "@types/mongodb": "^3.5.27",
-    "@types/nedb": "^1.8.9",
     "@types/node": "^13.13.5",
     "@types/ora": "^3.2.0",
     "@types/supertest": "^2.0.10",
@@ -54,10 +48,8 @@
     "chalk": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "feathers-nedb": "^5.1.0",
     "moment": "^2.26.0",
     "mongodb": "^3.6.2",
-    "nedb": "^1.8.0",
     "nodemon": "^2.0.4",
     "ora": "^4.0.4",
     "parse-xbrl": "https://github.com/nikensss/parse-xbrl.git",
