--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,8 @@
 {
   "configurations": [
     {
-      "command": "npm run debug",
-      "name": "Run npm run debug",
+      "command": "npm run start",
+      "name": "npm start",
       "request": "launch",
       "type": "node-terminal"
     }
