--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/moment": "^2.13.0",
     "@types/mongodb": "^3.5.27",
@@ -48,6 +49,7 @@
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
     "chalk": "^4.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.26.0",
