switching to mongoose
Connection with mongoose works fine. Creation and usage of Models is
also working well. Need to take care about the filings with ROA, ROE or
ROS with a value of 'NaN', which the model cannot cast to Number.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The hypotenuse of the smallest pythagorean triples.",
   "main": "src/main.ts",
   "scripts": {
-    "start": "DB_NAME=secgov-dev ts-node -r dotenv/config src/main.ts",
+    "start": "DB_NAME=test-db ts-node -r dotenv/config src/main.ts",
     "prod": "DB_NAME=secgov ts-node -r dotenv/config src/main.ts",
     "test-script": "NO_DB_INSERT=1 ts-node src/classes/tests/tests.ts",
     "nodemon": "nodemon",
@@ -37,26 +37,36 @@
   "homepage": "https://github.com/FaradayDetu/finten#readme",
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/chalk": "^2.2.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/moment": "^2.13.0",
     "@types/mongodb": "^3.5.27",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^13.13.5",
     "@types/ora": "^3.2.0",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.10",
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
     "mongodb": "^3.6.2",
+    "mongoose": "^5.10.7",
     "nodemon": "^2.0.4",
     "ora": "^4.0.4",
     "parse-xbrl": "https://github.com/nikensss/parse-xbrl.git",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.2"
