--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "nodemon": "nodemon",
     "test": "mocha -r dotenv/config  -r ts-node/register test/classes/**/*.spec.ts",
     "test-api": "mocha -r dotenv/config -r ts-node/register test/api/**/*.spec.ts",
-    "npmi-container": "rm -rf node_modules && npm i"
+    "npmi-container": "rm -rf node_modules && npm i",
+    "pre-deploy": "rm -rf node_modules && cd db_docker_test && docker-compose up --exit-code-from test"
   },
   "nodemonConfig": {
     "ignore": [
@@ -50,6 +51,7 @@
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.10",
+    "@types/validator": "^13.1.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -69,14 +71,17 @@
     "passport-jwt": "^4.0.0",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^7.0.2",
+    "@types/mongodb-memory-server": "^2.3.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "mongodb-memory-server": "^6.9.0"
   }
 }
