--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "mocha -r dotenv/config  -r ts-node/register test/classes/**/*.spec.ts",
     "test-api": "mocha -r dotenv/config -r ts-node/register test/api/**/*.spec.ts",
     "npmi-container": "rm -rf node_modules && npm i",
-    "pre-deploy": "rm -rf node_modules && cd db_docker_test && docker-compose up --exit-code-from test"
+    "pre-deploy": "rm -rf node_modules && cd db_docker_test && docker-compose up --exit-code-from test",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' "
   },
   "nodemonConfig": {
     "ignore": [
@@ -30,6 +31,7 @@
     "type": "git",
     "url": "git+https://github.com/weirwoodai/finten.git"
   },
+  "typings": "types",
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -79,9 +81,15 @@
     "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^7.0.2",
     "@types/mongodb-memory-server": "^2.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.1.3",
-    "mongodb-memory-server": "^6.9.0"
+    "mongodb-memory-server": "^6.9.0",
+    "prettier": "^2.1.2"
   }
 }
