--- a/package.json
+++ b/package.json
@@ -85,11 +85,13 @@
     "@typescript-eslint/parser": "^4.4.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chai-interface": "^2.0.3",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.1.3",
     "mongodb-memory-server": "^6.9.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "ts-mockito": "^2.6.1"
   }
 }
