--- a/package.json
+++ b/package.json
@@ -104,5 +104,8 @@
     "mongodb-memory-server": "^6.9.0",
     "prettier": "^2.1.2",
     "ts-mockito": "^2.6.1"
+  },
+  "engines": {
+    "node": ">=12.19.0"
   }
 }
