fix: moved to streams
Reading several filings, or getting several documents from the
visitedlinks collections could be a task that retrieves thousands of
documents. In such a situtation, the use of streams becomes imperative.
Modified test cases and production code to fit the needs.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,20 @@
 {
   "configurations": [
     {
-      "command": "npm run start",
+      "command": "npm start",
       "name": "npm start",
+      "request": "launch",
+      "type": "node-terminal"
+    },
+    {
+      "command": "npx mocha -r dotenv/config  -r ts-node/register test/classes/db/*.spec.ts",
+      "name": "subset test",
+      "request": "launch",
+      "type": "node-terminal"
+    },
+    {
+      "command": "npm test",
+      "name": "npm test",
       "request": "launch",
       "type": "node-terminal"
     }
