fix: fixing tickers strategy modified
Discussion with Alejandro and Alex led to implementing a solution that
modifies the TradingSymbol field to the one available in the tickers
collection for that ECIK, and creating a historical PastTradingSymbols
array in which the previous one are stored.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "type": "node-terminal"
     },
     {
-      "command": "npx mocha -r dotenv/config  -r ts-node/register test/classes/db/*.spec.ts",
+      "command": "npx mocha -r dotenv/config  -r ts-node/register test/classes/finten/*.spec.ts",
       "name": "subset test",
       "request": "launch",
       "type": "node-terminal"
