feat: major update
No more Tickers collection. Using CompanyInfo. Filing model does not
need to know anything about current or past trading symbols, only cares
about the one in the filing.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,8 @@
       "type": "node-terminal"
     },
     {
-      "command": "npm test",
-      "name": "npm test",
+      "command": "npm run test-debug",
+      "name": "debug tests",
       "request": "launch",
       "type": "node-terminal"
     }
