docs: added some documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
+    "ECIK",
     "Middlewares",
     "XBRL",
+    "downloadables",
     "finten",
     "reparse",
     "reparsing"
