feat: added Fred driver
Fred driver will allow FinTen to download macro-economic data
indicators that can be fed to Jarvis for performance improvement.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,13 @@
     "XBRL",
     "downloadables",
     "finten",
+    "fintendb",
+    "mockito",
+    "mongodb",
+    "mongodb user",
     "reparse",
-    "reparsing"
+    "reparsing",
+    "user",
+    "vvwni"
   ]
 }
