refactor: moved to bcrypt
Changed dependency to bcrypt since the js version is slower.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
   "cSpell.words": [
     "ECIK",
+    "Encrypter",
     "Middlewares",
+    "TSLA",
     "XBRL",
+    "depcruise",
     "downloadables",
+    "eciks",
     "finten",
     "fintendb",
     "mockito",
