--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "rimraf": "rm -rf node_modules && npm i",
     "lint": "eslint --fix '{src,test}/**/*.ts'",
     "pretty": "prettier --write {src,test}/**/*.ts",
-    "graph": "depcruise --include-only '^src/classes' --output-type dot src | dot -T svg > dependencygraph.svg"
+    "graph": "depcruise --include-only '^src/classes' --output-type dot src | dot -T svg > dependency_graph.svg"
   },
   "nodemonConfig": {
     "ignore": [
@@ -47,6 +47,7 @@
     }
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
@@ -59,6 +60,7 @@
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "axios": "^0.19.2",
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
