refactor: fintendb purpose changed
It will now only be used to connect and disconnect to MongoDB. All
operation related to collections have to be done from the model.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,19 +3,27 @@
     "ECIK",
     "Encrypter",
     "Middlewares",
+    "TRSB",
     "TSLA",
     "XBRL",
+    "adminuser",
     "depcruise",
     "downloadables",
     "eciks",
     "finten",
     "fintendb",
+    "minlength",
     "mockito",
     "mongodb",
     "mongodb user",
     "reparse",
     "reparsing",
+    "signup",
+    "testpassword",
+    "testuser",
     "user",
-    "vvwni"
+    "virtuals",
+    "vvwni",
+    "xbrls"
   ]
 }
