--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test-debug": "PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts --timeout 300000",
     "full-test": "PORT=3030 mocha --forbid-only -r dotenv/config -r ts-node/register test/**/*.spec.ts",
     "rimraf": "rm -rf node_modules && npm i",
-    "lint": "eslint --fix '{src,test}/**/*.ts'",
-    "pretty": "prettier --write {src,test}/**/*.ts",
+    "lint": "eslint --fix \"src/**/*.ts\" \"test/**/*.spec.ts\"",
+    "pretty": "prettier --write \"src/**/*.ts\" \"test/**/*.spec.ts\"",
     "graph": "depcruise --include-only '^src/classes' --output-type dot src | dot -T svg > dependency_graph.svg"
   },
   "nodemonConfig": {
