feat: added more generic macro collection
Created one schema for several collections. The four macros we want to
track at this point in time all follow the same schema, but a different
collection will be craeted for each of these.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
   "cSpell.words": [
+    "ACDGNO",
+    "DGORDER",
+    "DMOTRC",
     "ECIK",
     "Encrypter",
+    "IPDCONGD",
     "Middlewares",
+    "SBEA",
     "TRSB",
     "TSLA",
     "XBRL",
