--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "SBEA",
     "TRSB",
     "TSLA",
+    "Txts",
     "XBRL",
     "adminuser",
     "anyurl",
@@ -31,6 +32,7 @@
     "user",
     "virtuals",
     "vvwni",
-    "xbrls"
+    "xbrls",
+    "xmls"
   ]
 }
