--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node -r dotenv/config src/main.ts",
     "fix": "ts-node -r dotenv/config src/tests/test.ts",
     "nodemon": "nodemon",
-    "test": "PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts",
+    "test": "ENV=TEST PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts",
     "test-debug": "PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts --timeout 300000",
     "full-test": "PORT=3030 mocha --forbid-only -r dotenv/config -r ts-node/register test/**/*.spec.ts",
     "rimraf": "rm -rf node_modules && npm i",
