fix: test cases did not have the proper db setup
Only the first suite in the tests would have it properly, which caused
all other tests to fail when that one was not executed. The problem was
that reconnecting FinTenDB requires for it to be firstly disconnected,
which was only happening in the first test suite.
All test cases that access FinTenDB have now been modified to not depend
on the execution of that first test suite.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "nodemon": "nodemon",
     "test": "ENV=TEST PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts",
     "test-debug": "PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts --timeout 300000",
-    "full-test": "PORT=3030 mocha --forbid-only -r dotenv/config -r ts-node/register test/**/*.spec.ts",
+    "full-test": "ENV=TEST PORT=3030 mocha --forbid-only -r dotenv/config -r ts-node/register test/**/*.spec.ts",
     "rimraf": "rm -rf node_modules && npm i",
     "lint": "eslint --fix \"src/**/*.ts\" \"test/**/*.spec.ts\"",
     "pretty": "prettier --write \"src/**/*.ts\" \"test/**/*.spec.ts\"",
