fix: some tests no longer use network
Fred tests now check if the proper url is hit by checking the series_id
parameter of the url. They do not use the network anymore.

Also, the learning tests to understand the Fred api have been moved to
a file of type *.spec.learning.ts, which should be from now on the
convetion for all learning tests. A dedicated npm script has been added
to the package.json to exclusively test these.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fix": "ts-node -r dotenv/config src/tests/test.ts",
     "nodemon": "nodemon",
     "test": "ENV=TEST PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts",
+    "learning-test": "ENV=TEST PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.learning.ts",
     "test-debug": "PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts --timeout 300000",
     "full-test": "ENV=TEST PORT=3030 mocha --forbid-only -r dotenv/config -r ts-node/register test/**/*.spec.ts",
     "rimraf": "rm -rf node_modules && npm i",
@@ -103,6 +104,6 @@
     "ts-mockito": "^2.6.1"
   },
   "engines": {
-    "node": "12.20.1"
+    "node": "^14.15.1"
   }
 }
