feat: demo filings retrieved from any demo ticker
Also fixed the problem when setting the logger to save the logs in
a file the path of which did not exist. The whole application would stop
due to 'file does not exist' error. The solution was to basically create
the whole path and the file in case it didn't exist.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.ts",
   "scripts": {
     "start": "ts-node -r dotenv/config src/main.ts",
-    "fix": "ts-node -r dotenv/config src/tests/test.ts",
+    "temp": "ts-node -r dotenv/config src/temp.ts",
     "nodemon": "nodemon",
     "test": "ENV=TEST PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts",
     "learning-test": "ENV=TEST PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.learning.ts",
