--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "ts-node -r dotenv/config src/main.ts",
     "temp": "ts-node -r dotenv/config src/temp.ts",
     "nodemon": "nodemon",
-    "test": "ENV=TEST PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts",
-    "learning-test": "ENV=TEST PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.learning.ts",
-    "test-debug": "PORT=3030 mocha -r dotenv/config -r ts-node/register test/**/*.spec.ts --timeout 300000",
-    "full-test": "ENV=TEST PORT=3030 mocha --forbid-only -r dotenv/config -r ts-node/register test/**/*.spec.ts",
+    "test": "ENV=TEST PORT=3030 mocha",
+    "full-test": "npm run test -- --forbid-only",
+    "learning-test": "npm run test -- 'test/**/*.spec.learning.ts'",
+    "test-debug": "npm run test -- --timeout 300000",
     "rimraf": "rm -rf node_modules && npm i",
-    "lint": "eslint --fix \"src/**/*.ts\" \"test/**/*.spec.ts\"",
-    "pretty": "prettier --write \"src/**/*.ts\" \"test/**/*.spec.ts\"",
-    "graph": "depcruise --include-only '^src/classes' --output-type dot src | dot -T svg > dependency_graph.svg"
+    "lint": "eslint --fix 'src/**/*.ts' 'test/**/*.spec.ts'",
+    "pretty": "prettier --write 'src/**/*.ts' 'test/**/*.spec.ts'",
+    "graph": "depcruise --include-only '^src/classes' --output-type dot src | dot -T svg > dependency_graph.svg",
+    "stats": "npx sloc src"
   },
   "nodemonConfig": {
     "ignore": [
