--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,5 +67,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": ["node_modules", "types"],
-  "include": ["typings/**/*", "src/**/*"]
+  "include": ["typings/**/*", "src/**/*", "test/**/*"]
 }
