--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node -r dotenv/config src/main.ts",
     "temp": "ts-node -r dotenv/config src/temp/temp.ts",
     "nodemon": "nodemon",
-    "test": "ENV=TEST PORT=3030 DOTENV_CONFIG_PATH=.env.test mocha",
+    "test": "ENV=TEST PORT=3030 DOTENV_CONFIG_PATH=.env.test ts-mocha",
+    "test:watch": "npm run test -- --watch",
     "full-test": "npm run test -- --forbid-only",
     "learning-test": "npm run test -- 'test/**/*.spec.learning.ts'",
     "test-debug": "npm run test -- --timeout 300000",
@@ -43,7 +44,7 @@
   "homepage": "https://github.com/weirwoodai/finten#readme",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run pretty && npm run lint && npm run full-test && git add -A",
+      "pre-commit": "npm run pretty && npm run lint && git add -A",
       "pre-push": "npm run full-test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
@@ -99,9 +100,10 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
-    "mocha": "^8.1.3",
+    "mocha": "^8.3.1",
     "mongodb-memory-server": "^6.9.0",
     "prettier": "^2.1.2",
+    "ts-mocha": "^8.0.0",
     "ts-mockito": "^2.6.1"
   },
   "engines": {
