chore: removed unnecessary stuff
Also, updated test:watch script to use nodemon, since shenanigans with
mongoose wouldn't allow for proper test watching.

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -4,6 +4,5 @@
   "package": "./package.json",
   "recursive": true,
   "require": ["dotenv/config"],
-  "spec": ["test/**/*.spec.ts"],
-  "watch-files":["src/**/*.ts", "test/**/*.spec.ts"]
+  "spec": ["test/**/*.spec.ts"]
 }
