--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finten",
-  "version": "1.8.2",
+  "version": "1.8.3",
   "description": "The hypotenuse of the smallest pythagorean triples.",
   "main": "src/main.ts",
   "scripts": {
@@ -49,7 +49,7 @@
     }
   },
   "dependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
@@ -61,8 +61,7 @@
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.0",
     "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
     "csv-parser": "^2.3.3",
