--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     }
   },
   "dependencies": {
+    "@weirwoodai/parse-xbrl": "^1.1.5",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
@@ -62,7 +63,6 @@
     "mongoose": "^5.12.1",
     "nodemon": "^2.0.4",
     "ora": "^4.0.4",
-    "parse-xbrl": "git+https://weirwoodai@github.com/weirwoodai/parse-xbrl.git",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "supertest": "^4.0.2",
@@ -104,6 +104,6 @@
     "ts-mockito": "^2.6.1"
   },
   "engines": {
-    "node": ">14.16.1"
+    "node": ">=14.16.1"
   }
 }
