--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "stats": "npx sloc src"
   },
   "nodemonConfig": {
-    "ignore": [".git", "node_modules"],
-    "watch": ["src", "test"],
+    "ignore": [
+      ".git",
+      "node_modules"
+    ],
+    "watch": [
+      "src",
+      "test"
+    ],
     "exec": "npm start",
     "ext": "ts"
   },
@@ -44,7 +50,7 @@
     }
   },
   "dependencies": {
-    "@weirwoodai/parse-xbrl": "^1.2.4",
+    "@weirwoodai/parse-xbrl": "github:weirwoodai/parse-xbrl",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
