--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     }
   },
   "dependencies": {
-    "@weirwoodai/parse-xbrl": "github:weirwoodai/parse-xbrl",
+    "@weirwoodai/parse-xbrl": "git+ssh://git@github.com:weirwoodai/parse-xbrl.git",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
