--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "test": "ENV=TEST PORT=3030 DOTENV_CONFIG_PATH=.env.test ts-mocha",
     "test:watch": "nodemon --exec 'npm run test'",
     "test:full": "npm run test -- --forbid-only",
-    "learning-test": "npm run test -- 'test/**/*.spec.learning.ts'",
-    "test-debug": "npm run test -- --timeout 300000",
-    "rimraf": "rm -rf node_modules && npm i",
+    "test:learning": "npm run test -- 'test/**/*.spec.learning.ts'",
+    "test:debug": "npm run test -- --timeout 300000",
+    "rmnm": "rm -rf node_modules && npm ci",
     "lint": "eslint --fix 'src/**/*.ts' 'test/**/*.spec.ts'",
     "pretty": "prettier --write 'src/**/*.ts' 'test/**/*.spec.ts'",
     "pretty:check": "prettier --check 'src/**/*.ts' 'test/**/*.spec.ts'",
@@ -62,7 +62,7 @@
     "passport-jwt": "^4.0.0",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.10",
+    "typescript": "^4.4.3",
     "validator": "^13.1.17"
   },
   "devDependencies": {
