--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finten",
-  "version": "1.13.0",
+  "version": "1.13.1",
   "description": "The hypotenuse of the smallest pythagorean triples.",
   "main": "src/main.ts",
   "scripts": {
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@google-cloud/recaptcha-enterprise": "^2.4.0",
-    "@weirwoodai/parse-xbrl": "https://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@github.com/weirwoodai/parse-xbrl",
+    "@weirwoodai/parse-xbrl": "git+https://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@github.com/weirwoodai/parse-xbrl.git",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.0.0",
